--- a/silhouetteGameGUI/src/application/WaitingRoomDesign.fxml
+++ b/silhouetteGameGUI/src/application/WaitingRoomDesign.fxml
@@ -9,7 +9,7 @@
    <children>
       <Button fx:id="btExit" layoutX="429.0" layoutY="326.0" mnemonicParsing="false" prefHeight="46.0" onAction="#close" prefWidth="145.0" text="나가기" />
       <ImageView fitHeight="199.0" fitWidth="388.0" layoutX="12.0" layoutY="26.0" pickOnBounds="true" preserveRatio="true" />
-      <Button fx:id="btMakeRoom" layoutX="429.0" layoutY="263.0" mnemonicParsing="false" prefHeight="46.0" onAction="#makeRoom" prefWidth="145.0" text="방만들기" />
+      <Button fx:id="btOpenMakeRoom" layoutX="429.0" layoutY="263.0" mnemonicParsing="false" prefHeight="46.0" onAction="#openMakeRoomWindow" prefWidth="145.0" text="방만들기" />
       <ListView fx:id="lvRoomList" layoutX="25.0" layoutY="28.0" prefHeight="345.0" prefWidth="388.0" />
    </children>
 </Pane>
