--- a/silhouetteGameGUI/bin/application/GameRoomDesign.fxml
+++ b/silhouetteGameGUI/bin/application/GameRoomDesign.fxml
@@ -1,34 +1,73 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ScrollBar?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.StackPane?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" 
-prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" 
-fx:controller="application.GameRoomController">
-
+<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <TextArea fx:id="outputMsg" layoutX="13.0" layoutY="225.0" prefHeight="139.0" prefWidth="388.0" />
-      <TextField fx:id="inputMsg" layoutX="13.0" layoutY="363.0" prefHeight="27.0" prefWidth="342.0" />
-      
-      <Button fx:id="btSend" layoutX="354.0" layoutY="365.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="51.0" text="전송" />
-      
-      <ListView fx:id="lvUserList" layoutX="409.0" layoutY="26.0" prefHeight="199.0" prefWidth="182.0" />
-      
-      <Button fx:id="btOpenAnswer" visible="false" layoutX="428.0" layoutY="247.0" mnemonicParsing="false" onAction="#openAnswerWindow" prefHeight="60.0" prefWidth="145.0" text="정답" />
-      
-      <ImageView fitHeight="199.0" fitWidth="388.0" layoutX="12.0" layoutY="26.0" pickOnBounds="true" preserveRatio="true" />
-      <ScrollBar layoutX="386.0" layoutY="227.0" orientation="VERTICAL" prefHeight="136.0" prefWidth="14.0" />
-      
-      <Button fx:id="btSkip" visible="false" layoutX="354.0" layoutY="189.0" mnemonicParsing="false" text="Skip" />
-     
-      <Button fx:id="btGameStart" layoutX="428.0" layoutY="247.0" mnemonicParsing="false"  onAction="#gameStart" prefHeight="60.0" prefWidth="145.0" text="게임 시작" />
-      
-      <Button fx:id="btExit" layoutX="428.0" layoutY="326.0" mnemonicParsing="false"  onAction="#returnToWaitingRoom" prefHeight="29.0" prefWidth="145.0" text="나가기" />
+      <GridPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="500.0" prefWidth="800.0" AnchorPane.bottomAnchor="27.0" AnchorPane.leftAnchor="27.0" AnchorPane.rightAnchor="27.0" AnchorPane.topAnchor="27.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" minWidth="10.0" prefWidth="598.6666870117188" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="10.0" prefWidth="15.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="10.0" prefWidth="231.0" />
+        </columnConstraints>
+        <rowConstraints>
+            <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="237.66665649414062" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="-Infinity" minHeight="10.0" prefHeight="30.333343505859375" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="182.66665649414062" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <StackPane prefHeight="150.0" prefWidth="200.0">
+               <children>
+                  <ImageView fitHeight="250.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../../../../../../HUFS/BOSA/보정/0622%20고운.jpg" />
+                     </image>
+                  </ImageView>
+               </children>
+            </StackPane>
+            <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="241.0" prefWidth="520.0">
+               <children>
+                  <Button fx:id="btSkip" layoutX="486.0" layoutY="228.0" mnemonicParsing="false" text="Skip" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+                  <Label fx:id="timer" prefHeight="75.0" prefWidth="80.0" text="Label" visible="false" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
+               </children>
+            </AnchorPane>
+            <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="253.0" prefWidth="200.0" GridPane.columnIndex="2">
+               <children>
+                  <ListView fx:id="lvUserList" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="243.0" prefWidth="184.0" AnchorPane.bottomAnchor="-7.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+               </children>
+            </AnchorPane>
+            <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="134.0" prefWidth="496.0" GridPane.rowIndex="2">
+               <children>
+                  <TextArea fx:id="outputMsg" layoutY="12.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="163.0" prefWidth="552.0" AnchorPane.bottomAnchor="27.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                  <ScrollBar layoutX="534.0" layoutY="12.0" maxHeight="1.7976931348623157E308" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" orientation="VERTICAL" prefHeight="163.0" prefWidth="17.0" AnchorPane.bottomAnchor="27.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                  <TextField fx:id="inputMsg" layoutY="174.0" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="27.0" prefWidth="552.0" AnchorPane.bottomAnchor="1.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="11.0" />
+                  <Button fx:id="btSend" layoutX="501.0" layoutY="174.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="29.0" prefWidth="51.0" text="전송" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+               </children>
+            </AnchorPane>
+            <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="181.0" prefWidth="173.0" GridPane.columnIndex="2" GridPane.rowIndex="2">
+               <children>
+                  <Button fx:id="btOpenAnswer" layoutX="20.0" layoutY="31.0" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#openAnswerWindow" prefHeight="60.0" prefWidth="145.0" text="정답" />
+                  <Button fx:id="btGameStart" layoutX="20.0" layoutY="31.0" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#gameStart" prefHeight="60.0" prefWidth="145.0" text="게임 시작" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="19.0" />
+                  <Button fx:id="btExit" layoutX="20.0" layoutY="117.0" maxWidth="-Infinity" mnemonicParsing="false" onAction="#returnToWaitingRoom" prefHeight="39.0" prefWidth="145.0" text="나가기" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="19.0" />
+               </children>
+               <GridPane.margin>
+                  <Insets />
+               </GridPane.margin>
+            </AnchorPane>
+         </children>
+      </GridPane>
    </children>
-</Pane>
+</AnchorPane>
