--- a/silhouetteGameGUI/bin/application/GameRoomDesign.fxml
+++ b/silhouetteGameGUI/bin/application/GameRoomDesign.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<<<<<<< HEAD
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -16,7 +15,8 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
 
-<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1"
+fx:controller = "application.GameRoomController">
    <children>
       <GridPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="500.0" prefWidth="800.0" AnchorPane.bottomAnchor="27.0" AnchorPane.leftAnchor="27.0" AnchorPane.rightAnchor="27.0" AnchorPane.topAnchor="27.0">
         <columnConstraints>
@@ -33,9 +33,6 @@
             <StackPane prefHeight="150.0" prefWidth="200.0">
                <children>
                   <ImageView fitHeight="250.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../../../../../../HUFS/BOSA/보정/0622%20고운.jpg" />
-                     </image>
                   </ImageView>
                </children>
             </StackPane>
@@ -72,37 +69,3 @@
       </GridPane>
    </children>
 </AnchorPane>
-=======
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.ScrollBar?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.Pane?>
-
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" 
-prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" 
-fx:controller="application.GameRoomController">
-
-   <children>
-      <TextArea fx:id="outputMsg" layoutX="13.0" layoutY="225.0" prefHeight="139.0" prefWidth="388.0" />
-      <TextField fx:id="inputMsg" layoutX="13.0" layoutY="363.0" prefHeight="27.0" prefWidth="342.0" />
-      
-      <Button fx:id="btSend" layoutX="354.0" layoutY="365.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="51.0" text="전송" />
-      
-      <ListView fx:id="lvUserList" layoutX="409.0" layoutY="26.0" prefHeight="199.0" prefWidth="182.0" />
-      
-      <Button fx:id="btOpenAnswer" visible="false" layoutX="428.0" layoutY="247.0" mnemonicParsing="false" onAction="#openAnswerWindow" prefHeight="60.0" prefWidth="145.0" text="정답" />
-      
-      <ImageView fitHeight="199.0" fitWidth="388.0" layoutX="12.0" layoutY="26.0" pickOnBounds="true" preserveRatio="true" />
-      <ScrollBar layoutX="386.0" layoutY="227.0" orientation="VERTICAL" prefHeight="136.0" prefWidth="14.0" />
-      
-      <Button fx:id="btSkip" visible="false" layoutX="354.0" layoutY="189.0" mnemonicParsing="false" text="Skip" />
-     
-      <Button fx:id="btGameStart" layoutX="428.0" layoutY="247.0" mnemonicParsing="false"  onAction="#gameStart" prefHeight="60.0" prefWidth="145.0" text="게임 시작" />
-      
-      <Button fx:id="btExit" layoutX="428.0" layoutY="326.0" mnemonicParsing="false"  onAction="#returnToWaitingRoom" prefHeight="29.0" prefWidth="145.0" text="나가기" />
-   </children>
-</Pane>
->>>>>>> branch 'main' of https://github.com/tjdwo1111/silhouette-match-game
