--- a/silhouetteGameGUI/bin/application/WaitingRoomDesign.fxml
+++ b/silhouetteGameGUI/bin/application/WaitingRoomDesign.fxml
@@ -5,17 +5,12 @@
 <?import javafx.scene.layout.AnchorPane?>
 
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1"
+fx:controller ="application.WaitingRoomController">
    <children>
-<<<<<<< HEAD
       <Button fx:id="btExit" layoutX="629.0" layoutY="426.0" mnemonicParsing="false" onAction="#close" prefHeight="46.0" prefWidth="145.0" text="나가기" AnchorPane.bottomAnchor="28.0" AnchorPane.rightAnchor="26.0" />
       <Button fx:id="btOpenMakeRoom" layoutX="629.0" layoutY="364.0" mnemonicParsing="false" onAction="#openMakeRoomWindow" prefHeight="46.0" prefWidth="145.0" text="방만들기" AnchorPane.bottomAnchor="90.0" AnchorPane.rightAnchor="26.0" />
       <ListView fx:id="lvRoomList" layoutX="26.0" layoutY="28.0" prefHeight="444.0" prefWidth="574.0" AnchorPane.bottomAnchor="28.0" AnchorPane.leftAnchor="26.0" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="28.0" />
-=======
-      <Button fx:id="btExit" layoutX="429.0" layoutY="326.0" mnemonicParsing="false" prefHeight="46.0" onAction="#close" prefWidth="145.0" text="나가기" />
-      <ImageView fitHeight="199.0" fitWidth="388.0" layoutX="12.0" layoutY="26.0" pickOnBounds="true" preserveRatio="true" />
-      <Button fx:id="btOpenMakeRoom" layoutX="429.0" layoutY="263.0" mnemonicParsing="false" prefHeight="46.0" onAction="#openMakeRoomWindow" prefWidth="145.0" text="방만들기" />
-      <ListView fx:id="lvRoomList" layoutX="25.0" layoutY="28.0" prefHeight="345.0" prefWidth="388.0" />
->>>>>>> branch 'main' of https://github.com/tjdwo1111/silhouette-match-game
+
    </children>
 </AnchorPane>
